🎨 style: remove Rust compiler warnings